--- a/templates/ansible.html
+++ b/templates/ansible.html
@@ -6,5 +6,12 @@
 </head>
 <body>
 
+<div>
+    <form method="post" action="ansible">
+        <p><input type="file" id="file" name="file" /></p>
+        <input type="submit" value="提交" />
+    </form>
+</div>
+
 </body>
 </html>
